unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/SFDC_Purchase_Requisition__c.object-meta.xml
<CustomObject>
    <description>Purchase Requisitions empower end users to request new items, and tracks the status of their requests.</description>
    <label>Purchase Requisition</label>
    <nameField>
        <displayFormat>REQ{00000}</displayFormat>
        <label>Requisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>