unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes the Requisitioner may want to capture</description>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>