unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department in which the employee works</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General &amp; Admin</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Packaging &amp; Labeling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>