unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Item_Requested__c.field-meta.xml
<CustomField>
    <fullName>Item_Requested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Requested</label>
    <referenceTo>SFDC_Purchase_Items__c</referenceTo>
    <relationshipName>R00N30000001NaB3EAK</relationshipName>
    <type>Lookup</type>
</CustomField>