unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/New_Item__c.field-meta.xml
<CustomField>
    <fullName>New_Item__c</fullName>
    <description>To be used if the Item is not found and you want the buyer to research items</description>
    <label>New Item Description</label>
    <type>TextArea</type>
</CustomField>