unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Quanitity__c.field-meta.xml
<CustomField>
    <fullName>Quanitity__c</fullName>
    <label>Quanitity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>