unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Receive_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Receive_by_Date__c</fullName>
    <description>Date Items are needed by</description>
    <label>Receive-by Date</label>
    <type>Date</type>
</CustomField>