unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Request Date of the Requisition</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>