unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/SFDC_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>SFDC_Purchase_Order__c</referenceTo>
    <relationshipName>R00N30000001NaB4EAK</relationshipName>
    <type>Lookup</type>
</CustomField>