unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Requisition Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - New</fullName>
            </value>
            <value>
                <fullName>2 - Need Approval</fullName>
            </value>
            <value>
                <fullName>3 - Approved</fullName>
            </value>
            <value>
                <fullName>4 - Sourcing</fullName>
            </value>
            <value>
                <fullName>5 - PO Created</fullName>
            </value>
            <value>
                <fullName>6 - Received</fullName>
            </value>
            <value>
                <fullName>X - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>