unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/listViews/AllPurchaseRequisitions.listView-meta.xml
<ListView>
    <fullName>AllPurchaseRequisitions</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Item_Requested__c</columns>
    <columns>Quanitity__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase Requisitions</label>
</ListView>