unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/listViews/ApprovedGASalesRequisitions.listView-meta.xml
<ListView>
    <fullName>ApprovedGASalesRequisitions</fullName>
    <columns>NAME</columns>
    <columns>Item_Requested__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Receive_by_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>General &amp; Admin,Sales</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>3 - Approved</value>
    </filters>
    <label>Approved G&amp;A, Sales  Requisitions</label>
</ListView>