unpackaged/main/default/objects/SFDC_Purchase_Requisition__c/listViews/ApprovedRDRequisitions.listView-meta.xml
<ListView>
    <fullName>ApprovedRDRequisitions</fullName>
    <columns>NAME</columns>
    <columns>Item_Requested__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Receive_by_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>3 - Approved</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Research &amp; Development</value>
    </filters>
    <label>Approved R&amp;D Requisitions</label>
</ListView>